--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,17 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "api/*.py",             "use": "@vercel/python" },
+    { "src": "frontend/package.json", "use": "@vercel/static-build" }
+  ],
   "functions": {
     "api/*.py": {
+      "runtime": "python3.11",
       "maxDuration": 10
     }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.py" },
-    { "src": "/(.*)", "dest": "/frontend/dist/$1" }
+    { "src": "/api/(.*)", "dest": "api/$1.py" },
+    { "src": "/(.*)",     "dest": "frontend/dist/$1" }
   ]
 }
