--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,7 @@
     {
       "src": "api/*.py",
       "use": "@vercel/python",
-      "config": {
-        "runtime": "python3.11",
-        "maxDuration": 10
-      }
+        "config": { "runtime": "python3.10", "maxDuration": 10 }
     },
     {
       "src": "frontend/package.json",
